--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
     <title>AntiOfficial</title>
-    <meta name="description" content="My App description">
+    <meta name="description" content="AntiOfficial">
 
     <base href="/">
 
@@ -14,7 +14,7 @@
 
     <link rel="manifest" href="manifest.json">
 
-    <meta name="theme-color" content="#3f51b5">
+    <meta name="theme-color" content="#37474F">
 
     <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
     <meta name="mobile-web-app-capable" content="yes">
