--- a/src/anti-list.html
+++ b/src/anti-list.html
@@ -77,6 +77,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <p class="big center">[[_getFirstItemTitle(category.items)]]</p>
             </div>
         </anti-items>
+        <div class="footer">
+            <a href="mailto:rdoherty20@protonmail.com">Contact me</a>
+            © Copyright Ryan Doherty 2018
+        </div>
     </template>
 
     <script>
