--- a/src/anti-home.html
+++ b/src/anti-home.html
@@ -91,12 +91,13 @@
         </div>
         <div class="textwithimage">
             <p class="row">Business Card</p>
-            <img class="business" src="images/antiChiron.png" alt="">
+            <img class="business" src="images/businessCard.png" alt="">
         </div>
         <div class="textwithimage">
             <p class="row">Poster</p>
-            <img class="row" src="images/antiChiron.png" alt="">
+            <img class="row" src="images/grandOpeningPoster.png" alt="">
         </div>
+        <a class="textwithimage row" href="src/animatedLogo.html" target="_blank">Animate</a>
         <div class="footer">
             <a href="mailto:rdoherty20@protonmail.com">Contact me</a>
             © Copyright Ryan Doherty 2018
