fix some paths for gh pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>AntiOfficial</title>
     <meta name="description" content="AntiOfficial">
 
-    <base href="/">
+    <base href="/antiofficial/">
 
     <link rel="icon" href="images/favicon.ico">
 
@@ -38,7 +38,7 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <script>
-      window.Polymer = {rootPath: '/'};
+      window.Polymer = {rootPath: '/antiofficial/'};
 
       // Load and register pre-caching Service Worker
       if ('serviceWorker' in navigator) {
