--- a/src/anti-app.html
+++ b/src/anti-app.html
@@ -137,7 +137,7 @@
                     <a name="home" href="[[rootPath]]home">Home</a>
                     <dom-repeat items="[[categories]]" as="category" initial-count="4">
                         <template>
-                            <a name="list" href="/list/[[category.name]]">[[category.title]]</a>
+                            <a name="list" href="list/[[category.name]]">[[category.title]]</a>
                         </template>
                     </dom-repeat>
                 </iron-selector>
@@ -159,7 +159,7 @@
                             <dom-repeat items="[[categories]]" as="category" initial-count="4">
                                 <template>
                                     <p>
-                                        <a href="/list/[[category.name]]">[[category.title]]</a>
+                                        <a href="list/[[category.name]]">[[category.title]]</a>
                                     </p>
                                 </template>
                             </dom-repeat>
@@ -179,7 +179,7 @@
                 </iron-pages>
             </app-header-layout>
             <div class="social">
-                <a href="http://twitter.com"><img src="images/twitter.png" alt=""></a>
+                <a href="http://twitter.com/rdoherty20"><img src="images/twitter.png" alt=""></a>
                 <a href="http://facebook.com"><img src="images/facebook.png" alt=""></a>
                 <a href="http://instagram.com"><img src="images/instagram.png" alt=""></a>
             </div>
