fix more paths for gh pages

--- a/src/anti-items.html
+++ b/src/anti-items.html
@@ -141,7 +141,7 @@
             }
 
             _getItemHref(item) {
-                return item.name ? ['/detail', item.category, item.name].join('/') : null;
+                return item.name ? ['antioffical/detail', item.category, item.name].join('/') : null;
             }
 
             _getFirstItemImage(items) {
